Fix style issue where .button:active on Safari is by default color: white

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -131,6 +131,7 @@ body {
 }
 
 .button:active {
+    color: #000;
     transform: translate(3px, 3px);
 }
 
